added all files

--- a/index.html
+++ b/index.html
@@ -64,12 +64,11 @@
         <form id="formofform">
           <h3 id="order">PERSONAL INFO</h3>
           <input type="text" value="Age" class="field">
-          <input type="text" value="Height" class="field" id="fullname">
            <select id="gender" class="field">
             <option value="female">Female</option>
             <option value="male">Male</option>
           </select>
-          <input type="submit" value="ORDER"  class="btn formbtn">
+          <input type="submit" value="MATCH"  class="btn formbtn">
         </form>
       </div>
 
@@ -77,37 +76,37 @@
       <div class="replace">
         <p class="side">You have matched with <span class="color">Will Smith</span></p>
         <img src="img/c5.jpg" alt="image of a celebrity" class="showhide" id="img1" height="300px" width="300px">
-        <button class="btn formbtn">TRY AGAIN</button>
+        <button class="btn formbtn newbtn">TRY AGAIN</button>
       </div>
 
       <div id="replace2">
         <p class="side">You have matched with <span class="color">50Cent</span></p>
         <img src="img/c3.jpg" alt="image of a celebrity" class="showhide" id="img2" height="300px" width="300px">
-        <button class="btn formbtn">TRY AGAIN</button>
+        <button class="btn formbtn newbtn">TRY AGAIN</button>
       </div>
 
       <div id="replace3">
         <p class="side">You have matched with <span class="color">Clooney</span></p>
         <img src="img/c10.jpg" alt="image of a celebrity" class="showhide" id="img3" height="300px" width="300px">
-         <button class="btn formbtn">TRY AGAIN</button>
+         <button class="btn formbtn newbtn">TRY AGAIN</button>
       </div>
 
-      <div id="replace4">
+      <!--<div id="replace4">
         <p class="side">You have matched with <span class="color">Mile Cyrus</span></p>  
         <img src="img/c9.jpg" alt="image of a celebrity" class="showhide" id="img4" height="300px" width="300px">
-         <button class="btn formbtn">TRY AGAIN</button>
-      </div>  
+         <button class="btn formbtn newbtn">TRY AGAIN</button>
+      </div>-->  
 
       <div id="replace5">
         <p class="side">You have matched with <span class="color">Meagan G</span></p>  
         <img src="img/c8.png" alt="image of a celebrity" class="showhide" id="img5" height="300px" width="300px">
-        <button class="btn formbtn">TRY AGAIN</button>
+        <button class="btn formbtn newbtn">TRY AGAIN</button>
       </div>  
 
       <div id="replace6">
         <p class="side">You have matched with <span class="color">Kat Dennings</span></p>
         <img src="img/2.jpg" alt="image of a celebrity" class="showhide" id="img6" height="300px" width="300px">
-        <button class="btn formbtn">TRY AGAIN</button>
+        <button class="btn formbtn newbtn">TRY AGAIN</button>
       </div> 
 
     <!--footer-->
